--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
     "@astrojs/ts-plugin": "^1.10.4",
+    "@iconify-json/mdi": "^1.2.1",
     "astro": "^4.16.9",
+    "astro-icon": "^1.1.2",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
