--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": [
-        "./src/components/*"
-      ],
-      "@layout/*": [
-        "./src/layouts/*"
-      ]
+      "@components/*": ["./src/components/*"],
+      "@layout/*": ["./src/layouts/*"]
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
